--- a/Spokeduino Mothership/ui/spokeduino_mothership.ui
+++ b/Spokeduino Mothership/ui/spokeduino_mothership.ui
@@ -33,7 +33,7 @@
        <bool>true</bool>
       </property>
       <property name="currentIndex">
-       <number>1</number>
+       <number>0</number>
       </property>
       <widget class="QWidget" name="databaseTab">
        <attribute name="title">
@@ -1643,7 +1643,7 @@
                   <item>
                    <widget class="QRadioButton" name="radioButtonSpokeMeasurementDirectionDown">
                     <property name="text">
-                     <string>From high to low </string>
+                     <string>From high to low</string>
                     </property>
                     <property name="checked">
                      <bool>true</bool>
@@ -1772,6 +1772,9 @@
                  </property>
                  <property name="text">
                   <string>Newton</string>
+                 </property>
+                 <property name="checked">
+                  <bool>true</bool>
                  </property>
                 </widget>
                </item>
@@ -1961,7 +1964,7 @@
      <x>0</x>
      <y>0</y>
      <width>1171</width>
-     <height>33</height>
+     <height>22</height>
     </rect>
    </property>
    <widget class="QMenu" name="menuHelp">
